Insert Admin UI Files

--- a/templates/systemadmin/manageRole.html
+++ b/templates/systemadmin/manageRole.html
@@ -189,7 +189,7 @@
                         <a href="#" class="menu-toggle nav-link has-dropdown"><i
                                 data-feather="user"></i><span>Roles</span></a>
                         <ul class="dropdown-menu">
-                            <li><a class="nav-link" href="addRole.html">Add Roles</a></li>
+                            <li><a class="nav-link" href="manageRole.html">Add Roles</a></li>
                             <li><a class="nav-link" href="viewRole.html">View Roles</a></li>
                         </ul>
                     </li>
@@ -198,7 +198,7 @@
                         <a href="#" class="menu-toggle nav-link has-dropdown"><i
                                 data-feather="briefcase"></i><span>Institute</span></a>
                         <ul class="dropdown-menu">
-                            <li><a class="nav-link" href="addInstitute.html">Add Institute</a></li>
+                            <li><a class="nav-link" href="manageInstitute.html">Add Institute</a></li>
                             <li><a class="nav-link" href="viewInstitute.html">View Institute</a></li>
                         </ul>
                     </li>
@@ -207,7 +207,7 @@
                         <a href="#" class="menu-toggle nav-link has-dropdown"><i
                                 data-feather="users"></i><span>Users</span></a>
                         <ul class="dropdown-menu">
-                            <li><a class="nav-link" href="addUser.html">Add User</a></li>
+                            <li><a class="nav-link" href="manageUser.html">Add User</a></li>
                             <li><a class="nav-link" href="viewUser.html">View Users</a></li>
                         </ul>
                     </li>
@@ -232,7 +232,7 @@
                     <div class="col-12 col-md-12 col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <h4>Add Institute</h4>
+                                <h4>Add Role</h4>
                             </div>
                             <div class="card-body">
                                 <div class="form-group">
@@ -240,20 +240,7 @@
                                     <input type="text" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <label>Type</label>
-                                    <select class="form-control">
-                                        <option value="">Select Type</option>
-                                        <option value="1">University</option>
-                                        <option value="2">Company</option>
-                                    </select>
-
-                                </div>
-                                <div class="form-group">
-                                    <label>Email</label>
-                                    <input type="email" class="form-control">
-                                </div>
-                                <div class="form-group">
-                                    <label>Address</label>
+                                    <label>Description</label>
                                     <input type="text" class="form-control">
                                 </div>
                             </div>
