--- a/templates/systemadmin/sidebar.html
+++ b/templates/systemadmin/sidebar.html
@@ -55,7 +55,7 @@
                     <i data-feather="user"></i><span>Roles</span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="nav-link" href="addRole.html">Add Roles</a></li>
+                    <li><a class="nav-link" href="manageRole.html">Add Roles</a></li>
                     <li><a class="nav-link" href="viewRole.html">View Roles</a></li>
                 </ul>
             </li>
@@ -65,7 +65,7 @@
                     <i data-feather="briefcase"></i><span>Institute</span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="nav-link" href="addInstitute.html">Add Institute</a></li>
+                    <li><a class="nav-link" href="manageInstitute.html">Add Institute</a></li>
                     <li><a class="nav-link" href="viewInstitute.html">View Institute</a></li>
                 </ul>
             </li>
@@ -75,7 +75,7 @@
                     <i data-feather="users"></i><span>Users</span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="nav-link" href="addUser.html">Add User</a></li>
+                    <li><a class="nav-link" href="manageUser.html">Add User</a></li>
                     <li><a class="nav-link" href="viewUser.html">View Users</a></li>
                 </ul>
             </li>
