--- a/templates/systemadmin/index.html
+++ b/templates/systemadmin/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-    <title>FaceTrack</title>
+    <title>FaceTrack - System Admin</title>
     <!-- General CSS Files -->
     <link rel="stylesheet" href="../../static/assets/css/app.min.css">
     <!-- Template CSS -->
@@ -738,6 +738,7 @@
         </div>
     </div>
 </div>
+
 <!-- General JS Scripts -->
 <script src="../../static/assets/js/app.min.js"></script>
 <!-- JS Libraies -->
