--- a/templates/systemadmin/manageRole.html
+++ b/templates/systemadmin/manageRole.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-    <title>FaceTrack - Manage Role</title>
+    <title>FaceTrack - System Admin | Manage Role</title>
+
     <!-- General CSS Files -->
-    <link rel="stylesheet" href="../../static/assets/css/app.min.css">
-    <!-- Template CSS -->
-    <link rel="stylesheet" href="../../static/assets/css/style.css">
-    <link rel="stylesheet" href="../../static/assets/css/components.css">
-    <!-- Custom style CSS -->
-    <link rel="stylesheet" href="../../static/assets/css/custom.css">
-    <link rel='shortcut icon' type='image/x-icon' href='../../static/assets/img/favicon.ico'/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/app.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/components.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/custom.css') }}">
+    <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='assets/img/favicon.ico') }}">
+
 </head>
 
 <body>
@@ -19,53 +19,60 @@
 <div id="app">
     <div class="main-wrapper main-wrapper-1">
 
-        <!-- Header Component -->
+        <!-- Sidebar -->
         {% include 'systemadmin/sidebar.html' %}
 
-        <!-- Main Content -->
         <div class="main-content">
-
             <div class="section-body">
                 <div class="row">
                     <div class="col-12 col-md-12 col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <h4>Add Role</h4>
+                                <h4>
+                                    {% if role %}
+                                        Update Role
+                                    {% else %}
+                                        Add Role
+                                    {% endif %}
+                                </h4>
                             </div>
-                            <div class="card-body">
-                                <div class="form-group">
-                                    <label>Name</label>
-                                    <input type="text" class="form-control">
-                                </div>
-                                <div class="form-group">
-                                    <label>Description</label>
-                                    <input type="text" class="form-control">
-                                </div>
-                            </div>
-                            <div class="card-footer text-left">
-                                <button class="btn btn-primary mr-1" type="submit">Submit</button>
-                                <button class="btn btn-dark" type="reset">Reset</button>
-                            </div>
-                        </div>
 
+                            <form method="POST">
+                                <div class="card-body">
+                                    <div class="form-group">
+                                        <label>Name</label>
+                                        <input type="text" name="name" class="form-control"
+                                               value="{{ role.name if role else '' }}" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Description</label>
+                                        <input type="text" name="description" class="form-control"
+                                               value="{{ role.description if role else '' }}">
+                                    </div>
+                                </div>
+                                <div class="card-footer text-left">
+                                    <button class="btn btn-primary mr-1" type="submit">
+                                        {% if role %}
+                                            Update
+                                        {% else %}
+                                            Submit
+                                        {% endif %}
+                                    </button>
+                                    <a href="{{ url_for('roles.view_roles') }}" class="btn btn-dark">Cancel</a>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Settings Component -->
             {% include 'systemadmin/settings.html' %}
-
         </div>
     </div>
 </div>
 
-<!-- General JS Scripts -->
-<script src="../../static/assets/js/app.min.js"></script>
-<!-- JS Libraies -->
-<script src="../../static/assets/bundles/apexcharts/apexcharts.min.js"></script>
-<!-- Page Specific JS File -->
-<script src="../../static/assets/js/page/index.js"></script>
-<!-- Template JS File -->
-<script src="../../static/assets/js/scripts.js"></script>
+<!-- JS -->
+<script src="{{ url_for('static', filename='assets/js/app.min.js') }}"></script>
+<script src="{{ url_for('static', filename='assets/js/scripts.js') }}"></script>
 </body>
 </html>
