--- a/templates/hr/manageUsers.html
+++ b/templates/hr/manageUsers.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-    <title>FaceTrack - HR | Manage HR Users</title>
+    <title>FaceTrack - HR | Manage User</title>
 
-    <!-- General CSS Files -->
+    <!-- CSS Files -->
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/app.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/components.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/custom.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='assets/img/favicon.ico') }}">
 </head>
 
@@ -18,10 +17,8 @@
 <div id="app">
     <div class="main-wrapper main-wrapper-1">
 
-        <!-- Sidebar -->
         {% include 'hr/sidebar.html' %}
 
-        <!-- Main Content -->
         <div class="main-content">
             <div class="section-body">
                 <div class="row">
@@ -40,13 +37,13 @@
                             <form method="POST">
                                 <div class="card-body">
                                     <div class="form-group">
-                                        <label>Name <span class="text-danger">*</span></label>
+                                        <label>Name</label>
                                         <input type="text" name="name" class="form-control"
                                                value="{{ user.name if user else '' }}" required>
                                     </div>
 
                                     <div class="form-group">
-                                        <label>Email <span class="text-danger">*</span></label>
+                                        <label>Email</label>
                                         <input type="email" name="email" class="form-control"
                                                value="{{ user.email if user else '' }}" required>
                                     </div>
@@ -59,20 +56,32 @@
 
                                     {% if not user %}
                                         <div class="form-group">
-                                            <label>Password <span class="text-danger">*</span></label>
+                                            <label>Password</label>
                                             <input type="password" name="password" class="form-control" required>
                                         </div>
                                     {% endif %}
+
+                                    <div class="form-group">
+                                        <label>Department</label>
+                                        <input type="text" name="department" class="form-control"
+                                               value="{{ user.department if user else '' }}">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label>Designation</label>
+                                        <input type="text" name="designation" class="form-control"
+                                               value="{{ user.designation if user else '' }}">
+                                    </div>
 
                                     {% if user %}
                                         <div class="form-group">
                                             <label>Status</label>
                                             <select name="status" class="form-control">
                                                 <option value="Active"
-                                                        {% if user.status == "Active" %}selected{% endif %}>Active
+                                                        {% if user.status == 'Active' %}selected{% endif %}>Active
                                                 </option>
                                                 <option value="Inactive"
-                                                        {% if user.status == "Inactive" %}selected{% endif %}>Inactive
+                                                        {% if user.status == 'Inactive' %}selected{% endif %}>Inactive
                                                 </option>
                                             </select>
                                         </div>
@@ -80,8 +89,8 @@
                                 </div>
 
                                 <div class="card-footer text-left">
-                                    <button type="submit" class="btn btn-primary mr-1">
-                                        {% if user %} Update {% else %} Submit {% endif %}
+                                    <button class="btn btn-primary" type="submit">
+                                        {% if user %}Update{% else %}Submit{% endif %}
                                     </button>
                                     <a href="{{ url_for('hr_users.view_users') }}" class="btn btn-dark">Cancel</a>
                                 </div>
@@ -96,7 +105,6 @@
     </div>
 </div>
 
-<!-- JS Files -->
 <script src="{{ url_for('static', filename='assets/js/app.min.js') }}"></script>
 <script src="{{ url_for('static', filename='assets/js/scripts.js') }}"></script>
 </body>
