--- a/templates/hr/viewUsers.html
+++ b/templates/hr/viewUsers.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-    <title>FaceTrack - HR | View HR Users</title>
+    <title>FaceTrack - HR | View Users</title>
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/app.min.css') }}">
@@ -48,8 +48,8 @@
                                                 <th>Name</th>
                                                 <th>Email</th>
                                                 <th>Phone</th>
-                                                <th>Role</th>
-                                                <th>Institute</th>
+                                                <th>Department</th>
+                                                <th>Designation</th>
                                                 <th>Status</th>
                                                 <th>Action</th>
                                             </tr>
@@ -61,8 +61,8 @@
                                                     <td>{{ user.name }}</td>
                                                     <td>{{ user.email }}</td>
                                                     <td>{{ user.phone or '-' }}</td>
-                                                    <td>HR</td>
-                                                    <td>{{ user.institute_name or 'N/A' }}</td>
+                                                    <td>{{ user.department or '-' }}</td>
+                                                    <td>{{ user.designation or '-' }}</td>
                                                     <td>
                                                         {% if user.status == "Active" %}
                                                             <span class="badge badge-success">Active</span>
@@ -71,9 +71,7 @@
                                                         {% endif %}
                                                     </td>
                                                     <td>
-                                                        <a href="{{ url_for('hr_users.edit_user', user_id=user._id) }}"
-                                                           class="btn btn-info btn-sm">Update</a>
-
+                                                        <a href="{{ url_for('hr_users.edit_user', user_id=user._id) }}" class="btn btn-info btn-sm">Update</a>
                                                         <a href="{{ url_for('hr_users.delete_user', user_id=user._id) }}"
                                                            class="btn btn-danger btn-sm"
                                                            onclick="return confirm('Are you sure you want to delete this HR user?');">
@@ -83,9 +81,7 @@
                                                 </tr>
                                             {% else %}
                                                 <tr>
-                                                    <td colspan="8" class="text-center text-muted">
-                                                        No HR users found in your institute.
-                                                    </td>
+                                                    <td colspan="8" class="text-center text-muted">No HR users found</td>
                                                 </tr>
                                             {% endfor %}
                                             </tbody>
@@ -108,7 +104,6 @@
 <script src="{{ url_for('static', filename='assets/js/app.min.js') }}"></script>
 <script src="{{ url_for('static', filename='assets/bundles/datatables/datatables.min.js') }}"></script>
 <script src="{{ url_for('static', filename='assets/bundles/datatables/DataTables-1.10.16/js/dataTables.bootstrap4.min.js') }}"></script>
-<script src="{{ url_for('static', filename='assets/bundles/jquery-ui/jquery-ui.min.js') }}"></script>
 <script src="{{ url_for('static', filename='assets/js/page/datatables.js') }}"></script>
 <script src="{{ url_for('static', filename='assets/js/scripts.js') }}"></script>
 </body>
