--- a/templates/hr/sidebar.html
+++ b/templates/hr/sidebar.html
@@ -68,8 +68,8 @@
             </li>
 
 
-            <li class="dropdown {% if request.endpoint == 'institutes.viewinstitutes' %}active{% endif %}">
-                <a href="{{ url_for('institutes.view_institutes') }}" class="nav-link">
+            <li class="dropdown {% if request.endpoint == 'hr.index' %}active{% endif %}">
+                <a href="{{ url_for('hr.index') }}" class="nav-link">
                     <i data-feather="calendar"></i><span>Attendance</span>
                 </a>
             </li>
