Face recognition model

--- a/templates/hr/sidebar.html
+++ b/templates/hr/sidebar.html
@@ -55,7 +55,7 @@
                 </a>
             </li>
 
-            <li class="dropdown {% if request.endpoint == 'users.view_users' %}active{% endif %}">
+            <li class="dropdown {% if request.endpoint == 'hr_users.view_users' %}active{% endif %}">
                 <a href="{{ url_for('hr_users.view_users') }}" class="nav-link">
                     <i data-feather="users"></i><span>Users</span>
                 </a>
