--- a/templates/hr/faceCapture.html
+++ b/templates/hr/faceCapture.html
@@ -27,42 +27,39 @@
         <div class="main-content">
             <section class="section">
                 <div class="section-body">
-
                     <div class="container mt-4 text-center">
-                        <h4>
+
+                        <h3>
                             {% if action == "register" %}
                                 Register Face for {{ user.name }}
                             {% else %}
                                 Update Face for {{ user.name }}
                             {% endif %}
-                        </h4>
-                        <br>
+                        </h3>
 
-                        <!-- Old Faces Preview -->
                         {% if old_images %}
                             <div class="mb-3">
                                 <h6>Previous Registered Faces:</h6>
                                 {% for img in old_images[:3] %}
-                                    <img src="{{ '/' + img }}" alt="Not Open" width="120" height="120" class="rounded m-1"/>
+                                    <img src="{{ url_for('static', filename=img.split('static/')[1]) }}"
+                                         alt="Face Image" width="120" height="120" class="rounded m-1"/>
                                 {% endfor %}
                             </div>
                         {% endif %}
 
-                        <!-- Live Camera Feed -->
-                        <div>
-                            <img src="{{ url_for('employee_users.video_feed', user_id=user._id) }}"
-                                 width="300" height="300"
-                                 style="border:2px solid #007bff; border-radius:8px;">
+                        <div class="mt-4">
+                            <h6>Live Camera Feed</h6>
+                            <img src="{{ url_for('employee_users.video_feed') }}" width="400" height="300"
+                                 class="border rounded">
                         </div>
 
-                        <br>
-                        <a href="{{ url_for('employee_users.capture_face_action', user_id=user._id, action=action) }}"
-                           class="btn btn-success">Capture & Save</a>
+                        <div class="mt-3">
+                            <a href="{{ url_for('employee_users.capture_face_action', user_id=user._id, action=action) }}"
+                               class="btn btn-success">Capture & Save</a>
+                            <a href="{{ url_for('employee_users.view_users') }}" class="btn btn-secondary">Back</a>
+                        </div>
 
-                        <a href="{{ url_for('employee_users.view_users') }}" class="btn btn-secondary">Back</a>
                     </div>
-
-
                 </div>
             </section>
 
