--- a/templates/systemadmin/viewRole.html
+++ b/templates/systemadmin/viewRole.html
@@ -58,7 +58,7 @@
                                                     <td>{{ role.name }}</td>
                                                     <td>{{ role.description or 'No description' }}</td>
                                                     <td>
-                                                        <a href="#" class="btn btn-primary btn-sm">Permissions</a>
+{#                                                        <a href="#" class="btn btn-primary btn-sm">Permissions</a>#}
 
                                                         <a href="{{ url_for('roles.edit_role', role_id=role._id) }}"
                                                            class="btn btn-info btn-sm">Update</a>
